welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:6: error: type mismatch;
 found   : Unit
 required: Boolean
			if (bOk == true) {
                        ^inOrder:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if (bOk == false) {
        ^